--- a/gensfw.1
+++ b/gensfw.1
@@ -1,4 +1,4 @@
-.TH gensfw 1 "25 July 2018"
+.TH gensfw 1 "February 2019"
 .SH NAME
 gensfw \- Generate Schema Framework Files
 .SH SYNOPSIS
@@ -74,3 +74,7 @@ Charles P. Jungmann
 gensfw_isotable_procs(1)
 .br
 .B info gensfw
+.br
+.B info schemafw
+.br
+.B info schemaserver
