--- a/gensfw.1
+++ b/gensfw.1
@@ -70,8 +70,14 @@ and SRM files.
 
 .SH AUTHOR
 Charles P. Jungmann
+
 .SH SEE ALSO
-gensfw_isotable_procs(1)
+gensfw_isotable_procs(1),
+gensfw_srm(1),
+gensfw_srm_from_proc(1),
+gensfw_srm_from_proc_result(1),
+gensfw_proc_from_table(1)
+
 .br
 .B info gensfw
 .br
