Added explanation for help option, through which the other documentation is available.

--- a/gensfw_srm.1
+++ b/gensfw_srm.1
@@ -14,7 +14,11 @@ actions take place are determined by selecting an existing line in the SRM file
 by use of a rudimentary XPATH-like selection syntax.
 
 .SH OPTIONS
-Yet to be entered
+.TP
+.BR "--help" ", " "-h"
+Show help options.  This command is self-documenting, so the most current
+documentation will be found by using the \fBhelp\fI option and following the
+instructions therein.
 
 .SH EXAMPLES
 Yet to be entered
