Added a synopsis usage example.

--- a/gensfw_srm_from_proc.1
+++ b/gensfw_srm_from_proc.1
@@ -4,8 +4,8 @@
 gensfw_srm_from_proc \- Generate a SRM reponse mode from a procedure
 
 .SH SYNOPSIS
-Yet to be entered
-
+.B gensfw_srm_from_proc
+.IR "database-name" " " "procedure-name" " [" "mode-name" ]
 .SH DESCRIPTION
 .B gensfw_srm_from_proc
 is a tool for creating a response mode from a procedure.  Call with
